feat: add endpoint PATCH addTagToSpace
